<resources>
    <string name="app_name">Tea Quality</string>
    <string name="title_home">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_account">Аккаунт</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_cart">Корзина</string>
    <string name="cart_cart">Корзина</string>
    <string name="cart_promo_code">Введите промокод</string>
    <string name="cart_apply">Применить</string>
    <string name="cart_sumOfProduct">Сумма товаров</string>
    <string name="cart_delivery">Доставка</string>
    <string name="cart_sales">Скидка</string>
    <string name="cart_orderSum">Сумма заказа</string>
    <string name="btn_cart_placeYourOrder">Оформить заказ</string>
    <string name="popular">Популярное</string>
    <string name="Favorite">Избранное/</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="news">Новости</string>
    <string name="account">Аккаунт</string>
    <string name="type_your_email">Введите ваш Email</string>
    <string name="type_your_password">Введите ваш пароль</string>
    <string name="retype_your_password">Повоторите ваш пароль</string>
    <string name="already_registered_sign_in">Уже зарагестрированны, Войдите!</string>
    <string name="not_registered_yet_sign_up">Ещё не зарегестрированны, Заригестрируйтесь!</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="welcome_sign_up">Добро пожаловать, \nЗарегистрируйтесь чтобы продолжить</string>
    <string name="welcome_sign_in">Добро пожаловать, \nВойдите чтобы продолжить</string>
    <string name="app_icon">appIcon</string>
    <string name="ruble">₽</string>
</resources>