<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_nav_favorite"
        android:title="@string/title_favorite"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_nav_shopping"
        android:title="@string/title_cart"/>
</menu>