<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.teaqualitykotlin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.teaqualitykotlin.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.teaqualitykotlin.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.example.teaqualitykotlin.ui.shoppingCart.FragmentShoppingCart"
        android:label="fragment_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.teaqualitykotlin.ui.favorite.FragmentFavorite"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>